crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_call-5.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
testing(1, {2, 3)
---

Some(
    Spanned(
        Call(
            Spanned(
                Ident("testing"),
                0..7,
            ),
            [
                Spanned(
                    Error,
                    7..17,
                ),
            ],
        ),
        0..17,
    ),
)

--- Errors ---
[
    ParseError {
        span: 13..14,
        reason: ExpectedFound {
            expected: [
                Semi,
                Plus,
                Minus,
                Star,
                Slash,
                BangEq,
                EqEq,
                LessThan,
                GreaterThan,
                OpenParen,
            ],
            found: Some(
                Comma,
            ),
        },
    },
]
---
