crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_if-4.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if {1;) then _
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Error,
                0..12,
            ),
            then_branch: Spanned(
                Ident(
                    Spanned(
                        "_",
                        13..14,
                    ),
                ),
                13..14,
            ),
            else_branch: None,
        },
        0..14,
    ),
)

--- Errors ---
[
    ParseError {
        span: 6..7,
        reason: ExpectedFound {
            expected: [
                CloseBrace,
                Expression,
                Function,
                Module,
                Binding,
            ],
            found: Some(
                CloseParen,
            ),
        },
    },
]
---
