crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__recover_if-5.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if testing(1, {2, 3) then _
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Call(
                    Spanned(
                        Ident("testing"),
                        3..10,
                    ),
                    [
                        Spanned(
                            Error,
                            10..20,
                        ),
                    ],
                ),
                3..20,
            ),
            then_branch: Spanned(
                Ident("_"),
                26..27,
            ),
            else_branch: None,
        },
        0..27,
    ),
)

--- Errors ---
[
    ParseError {
        span: 16..17,
        reason: ExpectedFound {
            expected: [
                Semi,
                Plus,
                Minus,
                Star,
                Slash,
                BangEq,
                EqEq,
                LessThan,
                GreaterThan,
                OpenParen,
            ],
            found: Some(
                Comma,
            ),
        },
    },
]
---
