crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__variables.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{
	let msg = "Hello World!\n";
	let /* mut */ counter = 0;

	// TODO: count from 0 to 10 and print f"{counter}: Hello World!\n" every time
}
---

Some(
    Spanned(
        Block(
            [
                Spanned(
                    Item(
                        Spanned(
                            Binding {
                                name: Spanned(
                                    "msg",
                                    7..10,
                                ),
                                rhs: Spanned(
                                    String("Hello World!\n"),
                                    13..29,
                                ),
                            },
                            3..30,
                        ),
                    ),
                    3..30,
                ),
                Spanned(
                    Item(
                        Spanned(
                            Binding {
                                name: Spanned(
                                    "counter",
                                    46..53,
                                ),
                                rhs: Spanned(
                                    Int(0),
                                    56..57,
                                ),
                            },
                            32..58,
                        ),
                    ),
                    32..58,
                ),
            ],
        ),
        0..140,
    ),
)

--- Errors ---
[]
---
